# StringyMcStringFace

./: .markdownlint.json  .mega-linter.yml  .pre-commit-config.yaml  .prettierignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  concept.md  cspell.config.yaml  deny.toml  dist-workspace.toml  justfile
.github/: commit-instructions.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  copilot-setup-steps.yml  docs.yml  release.yml  security.yml
.kiro/hooks/: ci-auto-fix.kiro.hook  docs-sync-hook.kiro.hook
.kiro/specs/stringy-binary-analyzer/: design.md  requirements.md  tasks.md
.kiro/steering/: development.md  product.md  structure.md  tech.md
docs/: book.toml
docs/src/: SUMMARY.md  api.md  architecture.md  binary-formats.md  classification.md  cli.md  configuration.md  contributing.md  installation.md  introduction.md  output-formats.md  performance.md  quickstart.md  ranking.md  string-extraction.md  troubleshooting.md
docs/src/theme/: header.hbs
src/: lib.rs  main.rs  types.rs
src/classification/: mod.rs
src/container/: elf.rs  macho.rs  mod.rs  pe.rs
src/extraction/: mod.rs
tests/: integration_elf.rs
